--- a/index.html
+++ b/index.html
@@ -15,16 +15,9 @@
 
     <div class="navbar">
         <div class="nav-title">
-            <h1><a href="#">HarmoniFlow</a></h1>
+            <h1>HarmoniFlow</h1>
         </div>
-        <div class="nav-content">
-            <div class="content-title">
-            <ul>
-                <li><a href="#"><i class="fa fa-home"> HOME</i></a></li>
-                <li><a href="#"><i class="fa fa-heart"> ABOUT US</i></a></li>
-            </ul>
-            </div>
-        </div>     
+        
     </div>
     
     <div class="main">  
